# rag-chat

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/: app.py  content_handler.py  embed_pdf.py  embed_url.py  embedding_model.py  get_vector_sources.py  llm.py  vector_store.py
tests/: 1-ask.py  2-embed-urls.py  3-query-embeddings.py  4-clear-embeddings.py
