[tool.poetry]
name = "rag-website-chat"
version = "0.1.0"
description = ""
authors = ["Grey Lovelace"]
readme = "README.md"
packages = [{include = "src"}, {include = "tests"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pgvector = "^0.2.1"
langchain = "^0.1.11"
langchain_community = "^0.0.27"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
unstructured = "^0.15.7"
streamlit = "^1.25.0"
pypdf = "^3.15.1"
boto3 = "^1.28.49"
black = "^23.9.1"
jq = "^1.6.0"
psycopg = "^3.1.15"
psycopg-binary = "^3.1.15"
arize-phoenix = {extras = ["evals"], version = "^3.17.1"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"